可中断任务

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.vonzhou.learn</groupId>
-    <artifactId>java-concurrency-in-practice</artifactId>
+    <artifactId>jcip</artifactId>
     <version>1.0</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
